--- a/embeded/lab2/Objects/lab2.build_log.htm
+++ b/embeded/lab2/Objects/lab2.build_log.htm
@@ -21,21 +21,21 @@ Target DLL:      UL2CM3.DLL V1.164.8.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-C:\Users\User\Desktop\KeilKatalog\Lab2\lab2.uvprojx
-Project File Date:  10/24/2023
+C:\Users\User\Documents\AGH\embeded\lab2\lab2.uvprojx
+Project File Date:  10/26/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'D:\Program Files\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
 assembling startup_LPC17xx.s...
-compiling LED_Open1768.c...
+compiling Buttons_Open1768.c...
+compiling Joystick_Open1768.c...
 compiling PIN_LPC17xx.c...
 compiling GPIO_LPC17xx.c...
-compiling Buttons_Open1768.c...
-compiling system_LPC17xx.c...
-compiling Joystick_Open1768.c...
 compiling main.c...
+compiling LED_Open1768.c...
 compiling GPDMA_LPC17xx.c...
+compiling system_LPC17xx.c...
 compiling UART_LPC17xx.c...
 linking...
 Program Size: Code=5092 RO-data=744 RW-data=4 ZI-data=836  
@@ -122,9 +122,9 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:1.0.0
       Include file:  RTE_Driver/Config/RTE_Device.h
+      Source file:   Device/Source/ARM/startup_LPC17xx.s
       Source file:   Device/Source/system_LPC17xx.c
       Include file:  Device/Include/LPC17xx.h
-      Source file:   Device/Source/ARM/startup_LPC17xx.s
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
