--- a/embeded/lab2/Objects/lab2.build_log.htm
+++ b/embeded/lab2/Objects/lab2.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.38.0.0
 Copyright (C) 2022 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Szymon Kolanko, none, LIC=----
+License Information: Szymon Kolanko, Acer, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.38.0.0
-Toolchain Path:  D:\Program Files\ARM\ARMCLANG\Bin
+Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
 C Compiler:      ArmClang.exe V6.19
 Assembler:       Armasm.exe V6.19
 Linker/Locator:  ArmLink.exe V6.19
@@ -25,17 +25,17 @@ C:\Users\User\Documents\AGH\embeded\lab2\lab2.uvprojx
 Project File Date:  10/26/2023
 
 <h2>Output:</h2>
-*** Using Compiler 'V6.19', folder: 'D:\Program Files\ARM\ARMCLANG\Bin'
+*** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
 assembling startup_LPC17xx.s...
-compiling Buttons_Open1768.c...
 compiling Joystick_Open1768.c...
-compiling PIN_LPC17xx.c...
-compiling GPIO_LPC17xx.c...
 compiling main.c...
 compiling LED_Open1768.c...
-compiling GPDMA_LPC17xx.c...
+compiling PIN_LPC17xx.c...
+compiling Buttons_Open1768.c...
+compiling GPIO_LPC17xx.c...
 compiling system_LPC17xx.c...
+compiling GPDMA_LPC17xx.c...
 compiling UART_LPC17xx.c...
 linking...
 Program Size: Code=5092 RO-data=744 RW-data=4 ZI-data=836  
@@ -121,11 +121,11 @@ Package Vendor: Keil
       Source file:   RTE_Driver/PIN_LPC17xx.c
 
    * Component: Keil::Device:Startup:1.0.0
+      Include file:  Device/Include/LPC17xx.h
+      Source file:   Device/Source/system_LPC17xx.c
       Include file:  RTE_Driver/Config/RTE_Device.h
       Source file:   Device/Source/ARM/startup_LPC17xx.s
-      Source file:   Device/Source/system_LPC17xx.c
-      Include file:  Device/Include/LPC17xx.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
