--- a/embeded/lab4/Objects/lab3proj.build_log.htm
+++ b/embeded/lab4/Objects/lab3proj.build_log.htm
@@ -21,22 +21,25 @@ Target DLL:      UL2CM3.DLL V1.162.7.0
 Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
-C:\Users\1sieklinski\Desktop\lab3\lab3proj.uvprojx
-Project File Date:  11/16/2023
+C:\Users\1sieklinski\Documents\systemy_wbudowane\lab4\lab3proj.uvprojx
+Project File Date:  11/23/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
+compiling LCD_ILI9325.c...
+compiling Open1768_LCD.c...
 compiling LED_Open1768.c...
-compiling GPIO_LPC17xx.c...
-compiling GPDMA_LPC17xx.c...
+compiling Buttons_Open1768.c...
 compiling main.c...
 assembling startup_LPC17xx.s...
-compiling UART_LPC17xx.c...
+compiling GPDMA_LPC17xx.c...
 compiling PIN_LPC17xx.c...
+compiling GPIO_LPC17xx.c...
+compiling UART_LPC17xx.c...
 compiling system_LPC17xx.c...
 linking...
-Program Size: Code=8912 RO-data=896 RW-data=16 ZI-data=872  
+Program Size: Code=10394 RO-data=910 RW-data=20 ZI-data=876  
 ".\Objects\lab3proj.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -52,6 +55,7 @@ Package Vendor: Keil
                 http://www.keil.com/pack/Keil.LPC1700_DFP.2.6.1.pack
                 Keil.LPC1700_DFP.2.6.1
                 NXP LPC1700 Series Device Support, Drivers and Examples for MCB1700, Open1768 and LPC1788-32
+   * Component: Buttons Version: 1.0.0
    * Component: LED Version: 1.0.0
    * Component: USART Version: 2.10.0
    * Component: GPDMA Version: 1.2.0
@@ -63,6 +67,7 @@ Package Vendor: Keil
                 http://www.keil.com/pack/Keil.MDK-Middleware.7.8.0.pack
                 Keil.MDK-Middleware.7.8.0
                 Middleware for Keil MDK-Professional and MDK-Plus
+   * Component: Buttons Version: 1.0.0
    * Component: LED Version: 1.0.0
 
 <h2>Collection of Component include folders:</h2>
@@ -76,6 +81,9 @@ Package Vendor: Keil
 
 <h2>Collection of Component Files used:</h2>
 
+   * Component: ::Board Support:Buttons:1.0.0 (API)
+      Include file:  Board\Board_Buttons.h
+
    * Component: ::Board Support:LED:1.0.0 (API)
       Include file:  Board\Board_LED.h
 
@@ -83,6 +91,9 @@ Package Vendor: Keil
       Include file:  CMSIS\Driver\Include\Driver_USART.h
 
    * Component: ARM::CMSIS:CORE:5.2.0
+
+   * Component: Keil.Open1768::Board Support:Buttons:1.0.0
+      Source file:   Boards\Waveshare\Open1768\Common\Buttons_Open1768.c
 
    * Component: Keil.Open1768::Board Support:LED:1.0.0
       Source file:   Boards\Waveshare\Open1768\Common\LED_Open1768.c
@@ -99,14 +110,14 @@ Package Vendor: Keil
       Source file:   RTE_Driver\GPIO_LPC17xx.c
 
    * Component: Keil::Device:PIN:1.0.0
-      Include file:  RTE_Driver\PIN_LPC17xx.h
       Source file:   RTE_Driver\PIN_LPC17xx.c
+      Include file:  RTE_Driver\PIN_LPC17xx.h
 
    * Component: Keil::Device:Startup:1.0.0
-      Include file:  RTE_Driver\Config\RTE_Device.h
       Source file:   Device\Source\ARM\startup_LPC17xx.s
-      Include file:  Device\Include\LPC17xx.h
       Source file:   Device\Source\system_LPC17xx.c
+      Include file:  RTE_Driver\Config\RTE_Device.h
+      Include file:  Device\Include\LPC17xx.h
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
